# smart-customer-service-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  智能客服系统_简历优化路线图.md
backend/: api.py  config.py  faq_data.py  llm.py  main.py  memory.py  models.py  rag.py  rag_retriever.py  static_server.py  tracing.py
backend/agents/: __init__.py  base_agent.py  general_agent.py  order_agent.py  refund_agent.py  router_agent.py  tech_agent.py
backend/db/: repository.py  schema.sql  seed.py
backend/tools/: __init__.py  knowledge_tools.py  order_tools.py  system_tools.py
data/: faq_index.index  faq_index.json
frontend/: app.js  index.html  style.css
scripts/: seed_data.py
tests/: eval_router.py  test_async_stream.py  test_db_layer.py  test_escalation_tracing.py  test_hybrid_retriever.py
tests/data/: router_eval.jsonl  router_eval_report.json
